--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -8,8 +8,13 @@
   <body>
     <h1>1.2.1 Multimedia and Embedding Self Checks</h1>
       <h2>Self Check 1 Creating a Figure</h2>
+   <figure>
+       
+ <img class="Dino" src="/1-HTML/1-2-Multimedia-and-encoding/assets/dinosaur_small.jpg" 
+   alt="Dinosaur">
    
    
+   </figure>
    
    <!--create your figure here-->
   </body>
