--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -10,7 +10,7 @@
       <h2>Self Check 1 Creating a Figure</h2>
    <figure>
        
- <img class="Dino" src="/1-HTML/1-2-Multimedia-and-encoding/assets/dinosaur_small.jpg" 
+ <img class="Dino" src="dibosuar_small.jpg" 
    alt="Dinosaur">
    
    
