--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>1.2 Multimedia and Embedding Self Checks</title>
+     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <h1>1.2.1 Multimedia and Embedding Self Checks</h1>
