--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -11,7 +11,7 @@
       <h2>Self Check 1 Creating a Figure</h2>
    <figure>
        
- <img class="Dino" src="dinosuar_small.jpg" 
+ <img class="Dino" src="1-HTML/1-2-multimedia-and-encoding/assets>/dinosuar_small.jpg" 
    alt="Dinosaur">
    
    
