--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset="utf-8">
     <title>1.2 Multimedia and Embedding Self Checks</title>
-     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <h1>1.2.1 Multimedia and Embedding Self Checks</h1>
@@ -12,7 +11,15 @@
    <figure>
        
  <img class="Dino" src="assets/dinosuar_small.jpg" 
-   alt="Dinosaur">
+   alt="Dinosaur"
+   
+   width=""
+   height=""
+   
+   
+   
+   
+   >
    
    <figcaption>A trex on display</figcaption>
    </figure>
