--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -13,8 +13,8 @@
  <img class="Dino" src="assets/dinosuar_small.jpg" 
    alt="Dinosaur"
    
-   width=""
-   height=""
+   width="200px"
+   height="171px"
    
    
    
