--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -10,16 +10,11 @@
       <h2>Self Check 1 Creating a Figure</h2>
    <figure>
        
- <img src="images/dinosuar_small.jpg" 
+ <img src="assets/dinosuar_small.jpg" 
    alt="Dinosaur"
    
    width="200px"
-   height="171px"
-   
-   
-   
-   
-   >
+   height="171px">
    
    <figcaption>A trex on display</figcaption>
    </figure>
