--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -19,6 +19,11 @@
    <figcaption>A trex on display</figcaption>
    </figure>
    
-   <!--create your figure here-->
+   
+<ul>
+    <li><a href="../../index.html">Back to home page</a></li>
+    
+    
+</ul>
   </body>
 </html>
