--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -12,11 +12,26 @@
        
  <img src="assets/dinosaur_small.jpg" 
    alt="Dinosaur"
-   
    width="200px"
    height="171px">
-   
    <figcaption>A trex on display</figcaption>
    </figure>
+  
+  
+  
+   <h2>Self Check 2 Embedding Audio and Video</h2>
+   
+   <audio controls>
+     <loop>
+     <source src="viper.mp3" type="audio/mp3">
+     <source src="viper.ogg" type="audio/ogg">
+     </loop>
+     Your browser doesn't support HTML5 audio. Here is a <a href="viper.mp3">link to the audio</a>instead.
+   </audio>
+  
+  
+  
+  
+  
   </body>
 </html>
