--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -33,7 +33,7 @@
      </video>
      
      
-     <audio controls >
+     <audio controls loop>
      <source src="viper.mp3" type="audio/mp3">
      <source src="viper.ogg" type="audio/ogg">
      <a href="viper.mp3">For unsupported</a>
