--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -24,7 +24,7 @@
      <video control width="400" loop muted poster="poster.png">
        <source src="rabbit320.mp4" type="video/mp4">
        <source src="rabbit320.webm" type="video/webm">
-      <a href="rabbit320.mp4">For unsupported</a>
+      fS<a href="rabbit320.mp4">For unsupported</a>
      </video>
      </p>
      
