--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -21,7 +21,7 @@
   
    <h2>Self Check 2 Embedding Audio and Video</h2>
      <p>
-     <video control width="400" loop muted poster="poster.png">
+     <video control width="400" loop muted poster="assets/poster.png">
        <source src="rabbit320.mp4" type="video/mp4">
        <source src="rabbit320.webm" type="video/webm">
       fS<a href="rabbit320.mp4">For unsupported</a>
