--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -22,9 +22,9 @@
    <h2>Self Check 2 Embedding Audio and Video</h2>
      <p>
      <video control width="400" loop muted poster="assets/poster.png">
-       <source src="rabbit320.mp4" type="video/mp4">
-       <source src="rabbit320.webm" type="video/webm">
-      fS<a href="rabbit320.mp4">For unsupported</a>
+       <source src="assets/rabbit320.mp4" type="video/mp4">
+       <source src="assets/rabbit320.webm" type="video/webm">
+      fS<a href="assets/rabbit320.mp4">For unsupported</a>
      </video>
      </p>
      
@@ -32,9 +32,9 @@
      
      <p>
      <audio controls loop>
-     <source src="viper.ogg" type="audio/ogg">
-   <source src="viper.mp3" type="audio/mp3">
-     <a href="viper.mp3">For unsupported</a>
+     <source src="assets/viper.ogg" type="audio/ogg">
+   <source src="assets/viper.mp3" type="audio/mp3">
+     <a href="assets/viper.mp3">For unsupported</a>
      </audio>
      </p>
    
