--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -22,9 +22,9 @@
    <h2>Self Check 2 Embedding Audio and Video</h2>
      <p>
      <video control width="400" loop muted poster="assets/poster.png">
-       <source src="assets/rabbit320.mp4" type="video/mp4">
-       <source src="assets/rabbit320.webm" type="video/webm">
-      <a href="assets/rabbit320.mp4">For unsupported</a>
+       <source src="/1-HTML/1-2-multimedia-and-encoding/assets/rabbit320.mp4" type="video/mp4">
+       <source src="/1-HTML/1-2-multimedia-and-encoding/assets/rabbit320.webm" type="video/webm">
+      <a href="/1-HTML/1-2-multimedia-and-encoding/assets/rabbit320.mp4">For unsupported</a>
      </video>
      </p>
      
