--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -43,9 +43,9 @@
    <h3>Youtube video of Gordon Ramsay</h3>
    
   
+  <h3>Hucklberry Point Trailhead</h3>
   
-  
-  
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5917.434020885624!2d-74.07927962191376!3d42.13494112297215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ddaf2da6d49987%3A0x18df4829dd0ca9a8!2sHuckleberry%20Point!5e0!3m2!1sen!2sus!4v1572611769137!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   
   </body>
 </html>
