--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -54,9 +54,7 @@
 
 
   <p>
-      <svg>
-          <width="600">
-          <height="600">
+      <svg width="600" height="600">
 <image href="grid600.jpg" x="0" y="0" width="100%"/>
 <rect x="10" y="10" rx="20" width="150" height="150" fill="orange" stroke="black" stroke-width="5" opacity=".2"/>
                
