--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -57,8 +57,8 @@
       <svg width="600" height="600">
 <image href="assets/grid600.jpg" x="0" y="0" width="100%"/>
 <rect x="10" y="10" rx="20" width="150" height="150" fill="orange" stroke="black" stroke-width="5" opacity=".2"/>
-<ellipse x="285" y="250" rx="180" ry="80" fill="blue" stroke="black" stroke-width="5" opacity=".6"/>
-<circle x="400" y="450S" r="50" fill="#e32d05" stroke="black" stroke-width="5" opacity=".8"/>
+<ellipse cx="285" cy="250" rx="180" ry="80" fill="blue" stroke="black" stroke-width="5" opacity=".6"/>
+<circle cx="400" cy="450S" r="50" fill="#e32d05" stroke="black" stroke-width="5" opacity=".8"/>
 <polygon points="30,380 400,500 30,500" fill="lime" stroke="purple" stroke-width="5" opacity=".9"/>           
               
           
