--- a/1-HTML/1-2-multimedia-and-encoding/self-check.html
+++ b/1-HTML/1-2-multimedia-and-encoding/self-check.html
@@ -40,7 +40,8 @@
    <iframe width="560" height="315" src="https://www.youtube.com/embed/nmD5HC06q0A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    
    
-   <h3>Youtube video of Gordon Ramsay</h3>
+   <h3>Youtube video of Gordon Ramsay</h3>lp192
+   
    
   
   <h3>Hucklberry Point Trailhead</h3>
@@ -58,7 +59,7 @@
 <image href="assets/grid600.jpg" x="0" y="0" width="100%"/>
 <rect x="10" y="10" rx="20" width="150" height="150" fill="orange" stroke="black" stroke-width="5" opacity=".2"/>
 <ellipse cx="285" cy="250" rx="250" ry="50" fill="blue" stroke="black" stroke-width="5" opacity=".6"/>
-<circle cx="400" cy="450" r="50" fill="#e32d05" stroke="black" stroke-width="5" opacity=".8"/>
+<circle cx="450" cy="400" r="50" fill="#e32d05" stroke="black" stroke-width="5" opacity=".8"/>
 <polygon points="30,380 400,500 30,500" fill="lime" stroke="purple" stroke-width="5" opacity=".9"/>           
               
           
