--- a/1-HTML/1-3-html-tables/tables.html
+++ b/1-HTML/1-3-html-tables/tables.html
@@ -17,8 +17,8 @@
             <tr>
                 <th>Monday</th>
                 <td colspan="2">Geography</td>      
-                <th>Math</th>
-                <th>Art</th>
+                <td>Math</td>
+                <td>Art</td>
             </tr>
             <tr>
                 <th>Tuesday</th>
