--- a/1-HTML/1-3-html-tables/tables.html
+++ b/1-HTML/1-3-html-tables/tables.html
@@ -3,7 +3,7 @@
   <head>
 
     <title>1.3 HTML TABLES</title>
-    <link rel="stylesheet" type="text/css" href="tables.css"/>
+    <link rel="stylesheet" type="text/css" href="table.css"/>
     </head>
     <body>
        <h1>Example 1</h1>
