--- a/1-HTML/1-4-html-forms/pizza.html
+++ b/1-HTML/1-4-html-forms/pizza.html
@@ -21,8 +21,8 @@ Your Information
 <ul>
   <li>Name:</li>
   <li>Address:</li>
-  <li>Telephone Number:</li>
-  <li>Email:</li>
+  <li><input type="Telephone Number:"></li>
+  <li><input type="Email:"></li>
   <li>Delivery instructions:</li>
 </ul>
 
