--- a/1-HTML/1-4-html-forms/pizza.html
+++ b/1-HTML/1-4-html-forms/pizza.html
@@ -23,7 +23,7 @@ Your Information
   <li>Address:</li>
   <li><input type="Telephone Number:"></li>
   <li><input type="Email:"></li>
-  <li>Delivery instructions:</li>
+  <li><input type="Delivery instructions:"></li>
 </ul>
 
 
