--- a/1-HTML/1-4-html-forms/pizza.html
+++ b/1-HTML/1-4-html-forms/pizza.html
@@ -19,11 +19,11 @@
 
 Your Information
 <ul>
-  <li>Name:</li>
-  <li>Address:</li>
-  <li><input type="Telephone Number:"></li>
-  <li><input type="Email:"></li>
-  <li><input type="Delivery instructions:"></li>
+  <li>Name:<input type="Name:"></li>
+  <li>Address<input type="Address:"></li>
+  <li>Telephone Number<input type="Telephone Number:"></li>
+  <li>Email<input type="Email:"></li>
+  <li>Delivery instructions<input type="Delivery instructions:"></li>
 </ul>
 
 
