--- a/1-HTML/1-4-html-forms/pizza.html
+++ b/1-HTML/1-4-html-forms/pizza.html
@@ -20,10 +20,10 @@
 Your Information
 <ul>
   <li>Name:<input type="Name:"></li>
-  <li>Address<input type="Address:"></li>
+  <li>Address:<input type="Address:"></li>
   <li>Telephone Number<input type="Telephone Number:"></li>
-  <li>Email<input type="Email:"></li>
-  <li>Delivery instructions<input type="Delivery instructions:"></li>
+  <li>Email:<input type="Email:"></li>
+  <li>Delivery instructions:<input type="Delivery instructions:"></li>
 </ul>
 
 
@@ -33,8 +33,9 @@ Your Information
 
 <p>Crust <em>(Choose one)</em>:</p>
 <ul>
-  <li>Classic white</li>
-  <li>Multigrain</li>
+ <input type="checkbox" name="service" Value="Classic white">Classic White
+ <br>
+  <input type="checkbox" name="service" Value="Classic white">Multigrain
   <li>Cheese-stuffed crust</li>
   <li>Gluten-free</li>
 </ul>
