--- a/1-HTML/1-4-html-forms/pizza.html
+++ b/1-HTML/1-4-html-forms/pizza.html
@@ -33,10 +33,11 @@ Your Information
 
 <p>Crust <em>(Choose one)</em>:</p>
 <ul>
- <input type="checkbox" name="service" Value="Classic white">Classic White
+ <input type="checkbox" name="Crust" Value="Classic white">Classic White
  <br>
-  <input type="checkbox" name="service" Value="Classic white">Multigrain
-  <li>Cheese-stuffed crust</li>
+  <input type="checkbox" name="Crust" Value="Multigrain">Multigrain
+  <br>
+  <input type="checkbox" name="Crust" Value="Cheese-Stuffed crust">Cheese-stuffed crust
   <li>Gluten-free</li>
 </ul>
 
