--- a/1-HTML/1-4-html-forms/pizza.html
+++ b/1-HTML/1-4-html-forms/pizza.html
@@ -38,7 +38,8 @@ Your Information
   <input type="checkbox" name="Crust" Value="Multigrain">Multigrain
   <br>
   <input type="checkbox" name="Crust" Value="Cheese-Stuffed crust">Cheese-stuffed crust
-  <li>Gluten-free</li>
+  <br>
+   <input type="checkbox" name="Crust" Value="Gluten-free">Gluten-free
 </ul>
 
 <p>Toppings <em>(Choose as many as you want)</em>:</p>
