--- a/1-HTML/1-4-html-forms/pizza.html
+++ b/1-HTML/1-4-html-forms/pizza.html
@@ -69,7 +69,8 @@ maxlength="400"></textarea>
        <option value="6"></option>
 </datalist>
 <br>
-<input type="submit">
+<input type="submit" form action="http://www.blackgoosebistro.com/
+pizza.php" method="POST">
 <input type="reset">
 </body>
 </html>
