--- a/1-HTML/1-4-html-forms/pizza.html
+++ b/1-HTML/1-4-html-forms/pizza.html
@@ -68,9 +68,10 @@ maxlength="400"></textarea>
       <option value="5"></option>
        <option value="6"></option>
 </datalist>
-<br>
-<input type="submit" form action="http://www.blackgoosebistro.com/
+<form action="http://www.blackgoosebistro.com/
 pizza.php" method="POST">
+ <input type="submit" value="Bring me a pizza!">
 <input type="reset">
+</form>
 </body>
 </html>
