--- a/2-CSS/menu.html
+++ b/2-CSS/menu.html
@@ -47,12 +47,18 @@ dt strong{
     font-style: normal;
 }
 
-p.warning, sup{
+.warning, sup{
     font-size: small;
     color: red;
     
     
 }
+
+
+
+
+
+
 
 
 
