--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -25,9 +25,17 @@ header {
 a {
   text-decoration: none;
   color: #937393;
-  hover: #937393;
+  
 }
-
+a:hover{
+  
+  color: #c700f2;
+  background-color: #fff;
+  
+  
+  
+  
+}
 h1 {
   font: bold 1.5em Georgia, serif;
   text-shadow: .1em .1em .2em gray;
