--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -12,13 +12,13 @@ body {
   line-height: 175%;
   margin: 0 15% 0;
   background-color: #d2dc9d;
+  background-image: url(/2-CSS/images/bullseye.png);
 }
 header {
   margin-top: 0;
   padding: 3em 1em 2em 1em;
   text-align: center;
-  color: white;
-  
+  background-color: white;
   
 }
 
@@ -28,13 +28,12 @@ a {
   
 }
 a:hover{
-  
   color: #c700f2;
   background-color: #fff;
-  
-  
-  
-  
+}
+
+a:active{
+  background-color: #ff00ff;
 }
 h1 {
   font: bold 1.5em Georgia, serif;
@@ -170,7 +169,6 @@ h2 + p {
 <p class="warning"><sup>*</sup> We are required to warn you that undercooked food is a health risk.</p>
 </footer>
 
-</body>
 </head>
 </html>
 
