--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -20,7 +20,8 @@ header {
   padding: 3em 1em 2em 1em;
   text-align: center;
   background-color: white;
-  
+  background-image: url(/2-CSS/images/purpledot.png);
+  background-repeat: repeat-x;
 }
 
 a {
