--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <ul>
       <li><a href="2-CSS/cooking.html" title="1.4 HTML Forms">Cooking</a></li>
       <li><a href="2-CSS/menu.html" title="">menu</a></li>
-      <li><a href="2-CSS/summermenu.html" title=""></a>summer menu</li>
+      <li><a href="2-CSS/summermenu.html" title="">summer menu</a></li>
       
     </ul>
     
