--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -8,11 +8,12 @@
 <style>
 body {
   font-family: Georgia, serif;
-  font-size: 100%;
+  font-size: 100%; 
   line-height: 175%;
   margin: 0 15% 0;
   background-color: #d2dc9d;
   background-image: url(/2-CSS/images/bullseye.png);
+  background-position: center 200px;
 }
 
 header {
@@ -22,6 +23,7 @@ header {
   background-color: white;
   background-image: url(/2-CSS/images/purpledot.png);
   background-repeat: repeat-x;
+  background-position: center 200px;
 }
 
 a {
