--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -12,8 +12,9 @@ body {
   line-height: 175%;
   margin: 0 15% 0;
   background-color: #d2dc9d;
-  background-image: url(/2-CSS/images/bullseye.png);
-  background-position: center 200px;
+  background-image: url(images/blackgoose.png);
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
 header {
