--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -24,7 +24,7 @@ header {
   background-color: white;
   background-image: url(/2-CSS/images/purpledot.png);
   background-repeat: repeat-x;
-  background-position: center 200px;
+  background-position: center top;
 }
 
 a {
