--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -14,7 +14,7 @@ body {
   background-color: #d2dc9d;
   background-image: url(images/blackgoose.png);
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center 200px;
 }
 
 header {
