--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -46,6 +46,8 @@ h1 {
   font: bold 1.5em Georgia, serif;
   text-shadow: .1em .1em .2em gray;
   color: #993399;
+  background: red url(dots.gif)
+repeat-x;
 }
 h2 {
   font-size: 1em;
@@ -53,6 +55,7 @@ h2 {
   letter-spacing: .5em;
   text-align: center;
   color: #c60;
+  background: red url(dots.gif)
 }
 dt {
   font-weight: bold;
