--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -22,7 +22,7 @@ header {
   margin-top: 0;
   padding: 3em 1em 2em 1em;
   text-align: center;
-  background-color: rgb(255,255,255) ;
+  background-color: rgba(255,255,255,.5) ;
   background-image: url(/2-CSS/images/purpledot.png);
   background-repeat: repeat-x;
   background-position: center top;
