--- a/2-CSS/summermenu.html
+++ b/2-CSS/summermenu.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="menustyles.css">
 <meta charset="utf-8">
 <title>Black Goose Bistro Summer Menu</title>
 <link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
