--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li><a href="2-CSS/cooking.html" title="1.4 HTML Forms">Cooking</a></li>
       <li><a href="2-CSS/menu.html" title="">menu</a></li>
       <li><a href="2-CSS/summermenu.html" title="">summer menu</a></li>
+          <li><a href="2-CSS/bakery.html" title="">bakery</a></li>
       
     </ul>
     
