--- a/2-CSS/bakery_ch16.html
+++ b/2-CSS/bakery_ch16.html
@@ -26,7 +26,11 @@ h2 {
 }
 #menu {
   border: 3px solid #783F27;
-
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  flex-flow: row-wrap;
+  justify-content: center;
 }
 section {
   background: #F6F3ED;
@@ -34,6 +38,9 @@ section {
   padding: 20px;
   border: 1px dotted maroon;
   width: 240px;
+  display: flex;
+  flex-direction: column;
+  flex: auto;
 }
 .title {
   background-color: #783F27;
@@ -46,6 +53,13 @@ section {
   padding: 5px;
   width: 100%;
   text-align: center;
+  margin-top: auto;
+}
+.photo {
+  order: -1;
+  
+  
+  
 }
 </style>
 
