--- a/2-CSS/grid.html
+++ b/2-CSS/grid.html
@@ -26,7 +26,7 @@ body {
   margin-left: 5%;
   margin-right: 5%;
 	grid-template-rows: 3em 20px[main start] 150px 300px 5em[main end];
-	grid-template-colums:[main start]1fr[main end] 20px 150px 20px 150px 20px 150px;
+	grid-template-colums:[main start]1fr[main end] repeat(3, 20px 150px);
 }
 
 
