--- a/2-CSS/grid.html
+++ b/2-CSS/grid.html
@@ -17,17 +17,41 @@ body {
   font-family: Georgia, serif; 
   font-size: 100%;
   background-color: white;
-  margin: 0;
-}
+  margin: 0;}
 
 /* GRID STYLES START HERE */
 #layout {
   display: grid;
   margin-left: 5%;
   margin-right: 5%;
-	grid-template-rows: 3em 20px[main start] 150px 300px 5em[main end];
-	grid-template-colums:[main start]1fr[main end] repeat(3, 20px 150px);
+	grid-template-rows: 3em 20px [main start] 150px 300px 5em [main end];
+	grid-template-colums: [main start] 1fr auto [main end] repeat(3, 20px 150px);
 }
+
+nav{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-colum-end: 8;
+}
+
+#figC{
+  grid-row: 3 / 4;
+  grid-column: span 1 / -1;
+}
+
+
+#figA{
+ grid-area: 3 / 3 / 4 / 4;
+}
+
+#figB{
+  grid-area: 3 / 5 / 4 / 6;
+}
+
+
+
+
 
 
 
@@ -86,6 +110,7 @@ main {
   padding: 1em;
   border: double 4px #EADDC4;
   border-radius: 25px;
+  grid-area: main;
 }
 
 
@@ -102,6 +127,8 @@ footer {
   text-align: center;
   font-size: .8em;
   padding: .5em;
+  grid-row: 5 / 6;
+  grid-column: 3 / -1;
 }
 
 </style>
