--- a/2-CSS/grid.html
+++ b/2-CSS/grid.html
@@ -24,7 +24,7 @@ body {
   display: grid;
   margin-left: 5%;
   margin-right: 5%;
-	grid-template-rows: 3em 20px [main start] 150px 300px 5em [main end];
+	grid-template-rows:  12em 300px [main start] 600px [main end];
 	grid-template-colums: [main start] 1fr auto [main end] repeat(3, 20px 150px);
 }
 
