--- a/2-CSS/gridexample.html
+++ b/2-CSS/gridexample.html
@@ -24,12 +24,13 @@ body {
 #layout {
   display: grid;
   grid-template-rows: 12em auto 100px;
-  grid-template-colums: 300px 600px
+  grid-template-colums: 300px 600px }
+  
 
 
 
 #1{
-   background-color: red;
+   background-color: yellow;
     
 }
 
