--- a/2-CSS/gridexample.html
+++ b/2-CSS/gridexample.html
@@ -24,14 +24,16 @@ body {
 #layout {
   display: grid;
   grid-template-rows: 12em auto 100px;
-  grid-template-colums: 300px 600px }
+  grid-template-colums: 300px 600px 
+    
+}
   
 
 
 
 #1{
    background-color: yellow;
-    
+    grid-area: 2 / 2 / span 4 / 3;
 }
 
 #2{
