--- a/2-CSS/gridexample.html
+++ b/2-CSS/gridexample.html
@@ -33,11 +33,12 @@ body {
 
 #1{
    background-color: yellow;
-    grid-area: 2 / 2 / span 4 / 3;
+grid-area: 3 / 3 / 4 / 4;
 }
 
 #2{
     background-color: green;
+    grid-row: 3 / 4;
 }
 
 #3{
