--- a/2-CSS/gridexample.html
+++ b/2-CSS/gridexample.html
@@ -33,12 +33,12 @@ body {
 
 #1{
    background-color: yellow;
-grid-area: 3 / 3 / 4 / 4;
+grid-area: 1 / 1 / 2 / 2;
 }
 
 #2{
     background-color: green;
-    grid-row: 3 / 4;
+    grid area: 2 / 2 / 3 / 3;
 }
 
 #3{
