--- a/2-CSS/gridexample.html
+++ b/2-CSS/gridexample.html
@@ -24,7 +24,7 @@ body {
 #layout {
   display: grid;
   grid-template-rows: 12em auto 100px;
-  grid-template-colums: 300px 600px 
+  grid-template-colums: 300px 600px flexible;
     
 }
   
