--- a/2-CSS/gridexample.html
+++ b/2-CSS/gridexample.html
@@ -33,12 +33,13 @@ body {
 
 #1{
    background-color: yellow;
-grid-area: 1 / 1 / 2 / 2;
+grid-row-start: 1;
+grid-row-end: 2;
 }
 
 #2{
     background-color: green;
-    grid area: 2 / 2 / 3 / 3;
+    
 }
 
 #3{
