--- a/2-CSS/ch18_figures.html
+++ b/2-CSS/ch18_figures.html
@@ -56,9 +56,9 @@
 <div id="fig7" class="figure">
   <h1>Figure 18-7</h1>
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img2" alt="">
-  </div>
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img2" alt="">
+  </div>i
 </div> <!-- end fig7-->
 
 
@@ -66,18 +66,18 @@
 <div id="fig8" class="figure">
   <h1>Figure 18-8</h1>
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img3" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img3" alt="">
   </div>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img4" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img4" alt="">
   </div>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img5" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img5" alt="">
   </div>
 </div><!-- end fig8 -->
 
@@ -86,13 +86,13 @@
   <h1>Figure 18-9</h1>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img2" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img2" alt="">
   </div>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img4" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img4" alt="">
   </div>
 </div> <!-- end fig9 -->
 
@@ -102,18 +102,18 @@
   <h1>Figure 18-10</h1>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img2" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img2" alt="">
   </div>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img3" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img3" alt="">
   </div>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img4" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img4" alt="">
   </div>
 
 </div> <!-- end fig10 -->
