--- a/2-CSS/ch18_figures.html
+++ b/2-CSS/ch18_figures.html
@@ -124,18 +124,18 @@
   <h1>Figure 18-11</h1>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img2" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img2" alt="">
   </div>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img3" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img3" alt="">
   </div>
 
   <div class="container">
-    <img src="redwoods.jpg" class="img1" alt="">
-    <img src="redwoods.jpg" class="img4" alt="">
+    <img src="images/redwoods.jpg" class="img1" alt="">
+    <img src="images/redwoods.jpg" class="img4" alt="">
   </div>
 
 </div> <!-- end fig11 -->
@@ -146,8 +146,8 @@
   <h1>Figure 18-12</h1>
 
 <div class="container">
-  <img id="origimg" src="redwoods.jpg" alt="">
-  <img id="tiltimg" src="redwoods.jpg" alt="">
+  <img id="origimg" src="images/redwoods.jpg" alt="">
+  <img id="tiltimg" src="images/redwoods.jpg" alt="">
 </div>
 
 </div><!-- end fig12 -->
@@ -156,10 +156,10 @@
 <div id="fig13" class="figure" style="height: 200px;">
   <h1>Figure 18-13</h1>
 <ul>
-  <li><a href=""><img src="anchovies.jpg" id="img1" alt=""></a></li>
-  <li><a href=""><img src="jellyfish1.jpg" id="img2" alt=""></a></li>
-  <li><a href=""><img src="bluejellyfish.jpg" id="img3" alt=""></a></li>
-  <li><a href=""><img src="seadragon.jpg" id="img4"alt=""></a></li>
+  <li><a href=""><img src="images/anchovies.jpg" id="img1" alt=""></a></li>
+  <li><a href=""><img src="images/jellyfish1.jpg" id="img2" alt=""></a></li>
+  <li><a href=""><img src="images/bluejellyfish.jpg" id="img3" alt=""></a></li>
+  <li><a href=""><img src="images/seadragon.jpg" id="img4"alt=""></a></li>
 </ul>
 
 </div><!-- end fig13 -->
@@ -169,8 +169,8 @@
   <h1>Figure 18-15</h1>
 
 <ul>
-  <li><a href=""><img src="anchovies.jpg" id="img1" alt=""></a></li>
-  <li><a href=""><img src="jellyfish1.jpg" id="img2" alt=""></a></li>
+  <li><a href=""><img src="images/anchovies.jpg" id="img1" alt=""></a></li>
+  <li><a href=""><img src="images/jellyfish1.jpg" id="img2" alt=""></a></li>
   <li><a href=""><img src="bluejellyfish.jpg" id="img3" alt=""></a></li>
   <li><a href=""><img src="seadragon.jpg" id="img4"alt=""></a></li>
 </ul>
