--- a/2-CSS/ch18_figures.html
+++ b/2-CSS/ch18_figures.html
@@ -171,8 +171,8 @@
 <ul>
   <li><a href=""><img src="images/anchovies.jpg" id="img1" alt=""></a></li>
   <li><a href=""><img src="images/jellyfish1.jpg" id="img2" alt=""></a></li>
-  <li><a href=""><img src="bluejellyfish.jpg" id="img3" alt=""></a></li>
-  <li><a href=""><img src="seadragon.jpg" id="img4"alt=""></a></li>
+  <li><a href=""><img src="images/bluejellyfish.jpg" id="img3" alt=""></a></li>
+  <li><a href=""><img src="images/seadragon.jpg" id="img4"alt=""></a></li>
 </ul>
 
 </div>
@@ -183,10 +183,10 @@
   <h1>Figure 18-16</h1>
 
 <ul>
-  <li><a href=""><img src="anchovies.jpg" id="img1" alt=""></a></li>
-  <li><a href=""><img src="jellyfish1.jpg" id="img2" alt=""></a></li>
-  <li><a href=""><img src="bluejellyfish.jpg" id="img3" alt=""></a></li>
-  <li><a href=""><img src="seadragon.jpg" id="img4"alt=""></a></li>
+  <li><a href=""><img src="images/anchovies.jpg" id="img1" alt=""></a></li>
+  <li><a href=""><img src="images/jellyfish1.jpg" id="img2" alt=""></a></li>
+  <li><a href=""><img src="images/bluejellyfish.jpg" id="img3" alt=""></a></li>
+  <li><a href=""><img src="images/seadragon.jpg" id="img4"alt=""></a></li>
 </ul>
 
 </div>
