--- a/2-CSS/ch18_figures.html
+++ b/2-CSS/ch18_figures.html
@@ -58,7 +58,7 @@
   <div class="container">
     <img src="images/redwoods.jpg" class="img1" alt="">
     <img src="images/redwoods.jpg" class="img2" alt="">
-  </div>i
+  </div>
 </div> <!-- end fig7-->
 
 
